--- a/ormconfig.json
+++ b/ormconfig.json
@@ -8,7 +8,11 @@
   "migrations": [
     "./src/database/migrations/*.ts"
   ],
+  "entities": [
+    "./src/modules/**/entities/*.ts"
+  ],
   "cli": {
-    "migrationsDir": "./src/database/migrations"
+    "migrationsDir": "./src/database/migrations",
+    "entitiesDir": "./src/modules/**/entities"
   }
 }
