--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -73,7 +73,8 @@
       "error",
       {
         "devDependencies": [
-          "**/*.spec.js"
+          "**/*.spec.js",
+          "**/*.spec.ts"
         ]
       }
     ],
